force-app/main/default/objects/Product2/fields/Battery_Life__c.field-meta.xml
<CustomField>
    <fullName>Battery_Life__c</fullName>
    <label>Battery Life</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>