force-app/main/default/objects/Product2/fields/Body_Material__c.field-meta.xml
<CustomField>
    <fullName>Body_Material__c</fullName>
    <label>Body Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metal</fullName>
            </value>
            <value>
                <fullName>Plastic</fullName>
            </value>
            <value>
                <fullName>Glass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>