force-app/main/default/objects/Product2/fields/Custom_OrderId__c.field-meta.xml
<CustomField>
    <fullName>Custom_OrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Custom OrderId</label>
    <referenceTo>Custom_Order__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>