force-app/main/default/objects/Product2/fields/Flash_Memory__c.field-meta.xml
<CustomField>
    <fullName>Flash_Memory__c</fullName>
    <label>Flash Memory</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>