force-app/main/default/objects/Product2/fields/Mobile_Review__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mobile Review</label>
    <referenceTo>Mobile_Review__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>