force-app/main/default/objects/Product2/fields/Operating_System__c.field-meta.xml
<CustomField>
    <fullName>Operating_System__c</fullName>
    <label>Operating System</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Android</fullName>
            </value>
            <value>
                <fullName>Apple iOS</fullName>
            </value>
            <value>
                <fullName>Windows Phone</fullName>
            </value>
            <value>
                <fullName>Symbian</fullName>
            </value>
            <value>
                <fullName>Nokia Series 30+</fullName>
            </value>
            <value>
                <fullName>KaiOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>