force-app/main/default/objects/Product2/fields/Platform_Support__c.field-meta.xml
<CustomField>
    <fullName>Platform_Support__c</fullName>
    <label>Platform Support</label>
    <type>TextArea</type>
</CustomField>