force-app/main/default/objects/Product2/fields/RAM__c.field-meta.xml
<CustomField>
    <fullName>RAM__c</fullName>
    <label>RAM</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>