force-app/main/default/objects/Product2/fields/Rating_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rating_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Rating Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>