force-app/main/default/objects/Product2/fields/Reviews_Count__c.field-meta.xml
<CustomField>
    <fullName>Reviews_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Reviews Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>