force-app/main/default/objects/Product2/fields/Screen_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Screen_Resolution__c</fullName>
    <label>Screen Resolution</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
</CustomField>