force-app/main/default/objects/Product2/fields/Screen_Size__c.field-meta.xml
<CustomField>
    <fullName>Screen_Size__c</fullName>
    <label>Screen Size</label>
    <precision>2</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>