force-app/main/default/objects/Product2/fields/Screen_Technology__c.field-meta.xml
<CustomField>
    <fullName>Screen_Technology__c</fullName>
    <label>Screen Technology</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRT</fullName>
            </value>
            <value>
                <fullName>LCD</fullName>
            </value>
            <value>
                <fullName>LED</fullName>
            </value>
            <value>
                <fullName>QLED</fullName>
            </value>
            <value>
                <fullName>OLED</fullName>
            </value>
            <value>
                <fullName>AMOLED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>