force-app/main/default/objects/Product2/fields/Strap_Material__c.field-meta.xml
<CustomField>
    <fullName>Strap_Material__c</fullName>
    <label>Strap Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TPU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>